[package]
name = "vesting-indexer"
version = "0.1.0"
edition = "2021"
default-run = "vesting-indexer"

[[bin]]
name = "seed"
path = "src/bin/seed.rs"

[dependencies]
carbon-core = "0.12.0"
carbon-log-metrics = "0.12.0"
carbon-rpc-block-crawler-datasource = "0.12.0"
carbon-rpc-block-subscribe-datasource = "0.12.0"

solana-client = "^3.0.0"
solana-instruction = { version = "^3.0.0", default-features = false }
solana-pubkey = { version = "^3.0.0", features = ["serde"] }
solana-transaction-status = "^3.0.0"

sqlx = { version = "0.8", features = ["macros", "runtime-tokio-rustls", "postgres"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
solana-sdk = "^3.0.0"
solana-system-interface = "^2.0.0"
solana-commitment-config = "^3.0.0"
spl-token = "9"
spl-associated-token-account = "8"
shellexpand = "3"

dotenvy = "0.15"
env_logger = "0.11"
log = "0.4"
